# clion_qt_templates

./: CMakeLists.txt  readme.md  res.qrc  widget.cpp  widget.h  widget.ui
libs/mysqlib/: readme.md
libs/opencvlib/: build.bat  readme.md
resources/: res.qrc
